--- a/KrausxRGA/App.xaml
+++ b/KrausxRGA/App.xaml
@@ -70,7 +70,58 @@
             <Setter Property="CornerRadius" Value="0"/>
             <Setter Property="BorderThickness" Value="2"/>
             <Setter Property="BorderBrush" Value="{x:Null}"/>
+            <Setter Property="Height" Value="80"/>
+            <Setter Property="Width" Value="335"/>
+            <Setter Property="Background" Value="Black"/>
         </Style>
+        <Style x:Key="btnImage" TargetType="Image">
+            <Setter Property="Width" Value="70"/>
+            <Setter Property="Stretch" Value="None"/>
+        </Style>
+        <Style x:Key="ToolBarButtonBaseStyle" TargetType="{x:Type ButtonBase}">
+            <Setter Property="SnapsToDevicePixels" Value="true"/>
+            <Setter Property="OverridesDefaultStyle" Value="true"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ButtonBase}">
+                        <Border 
+                    x:Name="Border"  
+                    BorderThickness="1"
+                    Background="{x:Null}"
+                    BorderBrush="Transparent">
+                            <ContentPresenter 
+                        Margin="2"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        RecognizesAccessKey="True"/>
+                        </Border>
+                        
+                        <ControlTemplate.Triggers>
+                            <!-- Additional triggers removed, e.g "IsMouseOver" -->
+                            <!-- You may not want any at all -->
+                            <Trigger Property="IsFocused" Value="true">
+                                <Setter TargetName="Border" Property="Background" Value="#FF831212" />
+                                <Setter TargetName="Border" Property="BorderBrush" Value="#606060" />
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter TargetName="Border" Property="Background" Value="#FF831212" />
+                                <Setter TargetName="Border" Property="BorderBrush" Value="#606060" />
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="true">
+                                <Setter TargetName="Border" Property="Background" Value="#FF831212" />
+                                <Setter TargetName="Border" Property="BorderBrush" Value="#606060" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="FontFamily" Value="Arial"/>
+            <Setter Property="Foreground" Value="WhiteSmoke"/>
+            <Setter Property="FontSize" Value="25"/>
+            <Setter Property="Width" Value="260"/>
+            <Setter Property="HorizontalContentAlignment" Value="Left"/>
+        </Style>
+
         <Style x:Key="win8btn" TargetType="Button">
             <Setter Property="FontSize" Value="25"/>
             <Setter Property="Foreground" Value="WhiteSmoke"/>
@@ -110,6 +161,7 @@
         
         <!-- 2-->
         <Style x:Key="trgBorderHideShowTO390" TargetType="Border">
+            
             <Style.Triggers >
                 <Trigger Property="Border.Visibility" Value="Visible">
                     <Trigger.EnterActions>
