--- a/KrausxRGA/UI/wndBoxInformation.xaml
+++ b/KrausxRGA/UI/wndBoxInformation.xaml
@@ -3,7 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Kraus GRA System" Height="714" Width="1228"
         Name="wndLogin" Loaded="wndLogin_Loaded" WindowState="Maximized" Icon="/KrausRGA;component/Images/RGAICO.ico" Closing="wndLogin_Closing">
+
+
     <Viewbox >
+
         <Grid>
             <Border BorderThickness="2" BorderBrush="#FFD49919">
                 <Canvas Margin="-1,0,1,0" RenderTransformOrigin="0.965,0.968" Height="777" Width="1400" >
@@ -15,9 +18,8 @@
                     <Canvas x:Name="cnTitle" Height="100" Width="1400" Canvas.Left="2">
                         <Canvas.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                <GradientStop Color="#FF308AA4" Offset="0.54"/>
                                 <GradientStop Color="#FF686868" Offset="0.988"/>
-                                <GradientStop Color="#FF686868"/>
+                                <GradientStop Color="#B2111111"/>
                             </LinearGradientBrush>
                         </Canvas.Background>
                         <Image x:Name="imgLogo" Height="63" Canvas.Left="5" Canvas.Top="20" Width="175" Stretch="None" Cursor="None" Source="/KrausRGA;component/Images/logo.png"/>
@@ -28,42 +30,56 @@
                         </TextBlock>
                     </Canvas>
 
-                    <Border Name="bdrButtons" Style="{StaticResource trgBorderHideShow0 }" Canvas.Left="1" Canvas.Top="100" Background="#B20B4F70" Height="677">
+                    <Border Name="bdrButtons" Style="{StaticResource trgBorderHideShow0 }" Canvas.Top="100" Background="#B2111111" Height="677">
                         <Canvas Name="cnNewReturn" Width="340" Canvas.Top="128" >
-                            <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Top="59" Width="305" Background="#FF424140" Canvas.Left="15" BorderBrush="Black">
-                                <Button x:Name="btnNewScan" Style="{StaticResource win8btn}" Content="Application Setting" Margin="-1,-1,-1,1" Click="btnNewScan_Click"/>
-                            </Border>
-                            <TextBlock TextWrapping="Wrap"  Text="New Return" FontWeight="Bold" TextAlignment="Center" FontSize="35" Width="332" Canvas.Left="5"  Canvas.Top="6" Foreground="#FFD49611"/>
-                            <TextBlock TextWrapping="Wrap" Visibility="Hidden" Text="Scan Barcode from Return" FontWeight="Bold" TextAlignment="Center" Canvas.Top="508" FontSize="35" Width="337" Foreground="#FF79CB84"/>
-                            <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Left="15" Canvas.Top="219" Width="305" Background="#FF474747">
-                                <Button x:Name="btnPONumber" Style="{StaticResource win8btn}" Content="Enter Number" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
-                            </Border>
-                            <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Left="15" Canvas.Top="325" Width="305" Background="#FF3E3F42">
-                                <Button x:Name="btnBoxNumber" Style="{StaticResource win8btn}" Content="Scan" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
-                            </Border>
-                            <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Left="15" Canvas.Top="432" Width="305" Background="#FF3E3F42">
-                                <Button x:Name="btnlogout" Style="{StaticResource win8btn}" Content="Log Out" Margin="-1,-1,-1,1" Click="btnlogout_Click"/>
-                            </Border>
-
-                            <TextBlock TextWrapping="Wrap" Text="SR # of Return" FontWeight="Bold" TextAlignment="Center" Canvas.Top="167" FontSize="35" Width="337" Foreground="White" Canvas.Left="-7"/>
+                            <StackPanel>
+                                <Canvas Height="117">
+                                    <Image Name="imgUser" Source="/KrausRGA;component/Images/UserIcon.png" Canvas.Left="10" Canvas.Top="36" Height="51" Width="60"></Image>
+                                    <TextBlock Name="txtUserName" Text="User not Logged." Foreground="WhiteSmoke" FontSize="20" Width="255" Canvas.Left="70" Canvas.Top="36" Height="51" />
+                                </Canvas>
+                                <Border Style="{StaticResource bdrWin8btn}"  Canvas.Top="140"  >
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoEnterNumber.png" MouseDown="btnBoxNumber_Click"></Image>
+                                        <Button x:Name="btnPONumber" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Enter Number" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
+                                    </StackPanel>
+                                </Border>
+                                <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="225"  >
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoScan.jpg" MouseDown="btnBoxNumber_Click"></Image>
+                                        <Button x:Name="btnBoxNumber" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Scan" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
+                                    </StackPanel>
+                                </Border>
+                                <Border  Style="{StaticResource bdrWin8btn}" >
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSetting.png" MouseDown="btnNewScan_Click"/>
+                                        <Button x:Name="btnNewScan" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Application Setting" Click="btnNewScan_Click" />
+                                    </StackPanel>
+                                </Border>
+                                <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="395" >
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoLogout.png" MouseDown="btnlogout_Click"></Image>
+                                        <Button x:Name="btnlogout" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Log Out" Click="btnlogout_Click"/>
+                                    </StackPanel>
+                                </Border>
+                            </StackPanel>
                         </Canvas>
                     </Border>
 
-                    <Border Name="bdrLogin" Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="#FF209DD8" BorderThickness="2,2,2,2" Height="265" Canvas.Left="390" Canvas.Top="325" Width="750" CornerRadius="15" Background="#CC575757">
+                    <Border Name="bdrLogin" Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="#FF209DD8" BorderThickness="2,2,2,2" Height="265" Canvas.Left="390" Canvas.Top="325" Width="750" CornerRadius="15" Background="#CC232121">
                         <Canvas>
-                            <TextBlock Name="tbLoginText" Text="Please scan your badge" FontSize="20" Canvas.Left="188" Canvas.Top="71" />
+                            <TextBlock Name="tbLoginText" Text="Please scan your badge" FontSize="20" Canvas.Left="188" Canvas.Top="71" Foreground="#FFE0E0E0" />
                             <TextBlock Name="tbTitleLogin" Style="{StaticResource tbFormTitle}"  Text="Login" Height="52" Width="124" Canvas.Left="8" Canvas.Top="8"/>
-                            <Border BorderBrush="Black" BorderThickness="2" Height="55" Canvas.Left="188" Canvas.Top="98" Width="395" CornerRadius="10" Background="White">
+                            <Border BorderBrush="Black" BorderThickness="2" Height="55" Canvas.Left="188" Canvas.Top="98" Width="395"  Background="White">
                                 <TextBox Name="txtLogin" TextWrapping="Wrap" Text="" FontSize="30" BorderBrush="{x:Null}" Background="{x:Null}" KeyDown="txtLogin_KeyDown"/>
                             </Border>
 
                         </Canvas>
                     </Border>
 
-                    <Border Name="bdrScan" Visibility="Hidden"  Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="#FF209DD8" BorderThickness="2,2,2,2" Height="265" Canvas.Left="1404" Canvas.Top="325" Width="750" CornerRadius="15" Background="#CC636363">
+                    <Border Name="bdrScan" Visibility="Hidden"  Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="#FF209DD8" BorderThickness="2,2,2,2" Height="265" Canvas.Left="1404" Canvas.Top="325" Width="750" CornerRadius="15"  Background="#CC232121">
                         <Canvas>
                             <ProgressBar x:Name="pbrScanner" Height="55" Canvas.Top="98" Width="395" Foreground="#FF0DBB05" Background="White" BorderBrush="{x:Null}" Canvas.Left="188" />
-                            <TextBlock x:Name="tbScanText" Text="Please Scan Barcode" FontSize="20" Canvas.Left="188" Canvas.Top="71" />
+                            <TextBlock x:Name="tbScanText" Text="Please Scan Barcode" FontSize="20" Canvas.Left="188" Canvas.Top="71" Foreground="WhiteSmoke"/>
                             <TextBlock x:Name="tbTitleScan" Style="{StaticResource tbFormTitle}"  Text="Scan" Height="52" Width="124" Canvas.Left="8" Canvas.Top="8"/>
                             <Border BorderThickness="2" Height="55" Canvas.Left="188" Canvas.Top="98" Width="395" CornerRadius="10">
                                 <TextBox x:Name="txtScan" TextWrapping="Wrap" Text="" FontSize="30" BorderBrush="{x:Null}" Background="{x:Null}" KeyDown="txtScan_KeyDown"/>
@@ -72,7 +88,7 @@
                     </Border>
                     <Border BorderThickness="1" Height="160" Canvas.Top="619" Width="1063" Canvas.Left="339">
                         <Canvas>
-                            <Border Name="bdrMsg" BorderThickness="1" Height="27" Canvas.Left="0" Canvas.Top="131" Width="1061" Background="#E1007ACC">
+                            <Border Name="bdrMsg" BorderThickness="1" Height="50" Canvas.Left="0" Canvas.Top="108" Width="1061" Background="#E1007ACC">
                                 <Border.Style >
                                     <Style TargetType="{x:Type Border}">
                                         <Style.Triggers>
@@ -102,7 +118,7 @@
                             </Border>
                         </Canvas>
                     </Border>
-                    
+
                 </Canvas>
             </Border>
         </Grid>
