--- a/KrausxRGA/UI/wndBoxInformation.xaml
+++ b/KrausxRGA/UI/wndBoxInformation.xaml
@@ -1,6 +1,7 @@
 ﻿<Window  x:Class="KrausRGA.UI.wndBoxInformation"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+          xmlns:cam="clr-namespace:WebcamControl;assembly=WebcamControl"
         Title="Kraus GRA System" Height="714" Width="1228"
         Name="wndLogin" Loaded="wndLogin_Loaded" WindowState="Maximized" Icon="/KrausRGA;component/Images/RGAICO.ico" Closing="wndLogin_Closing">
 
@@ -47,6 +48,12 @@
                                     <StackPanel Orientation="Horizontal">
                                         <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoScan.jpg" MouseDown="btnBoxNumber_Click"></Image>
                                         <Button x:Name="btnBoxNumber" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Scan" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
+                                    </StackPanel>
+                                </Border>
+                                <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" >
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoCam.png" MouseDown="btnCamera_Click" />
+                                        <Button x:Name="btnCamera" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Camera" Click="btnCamera_Click" />
                                     </StackPanel>
                                 </Border>
                                 <Border  Style="{StaticResource bdrWin8btn}" >
@@ -118,9 +125,163 @@
                             </Border>
                         </Canvas>
                     </Border>
-
+                    <Border x:Name="bdrCamera" Visibility="Hidden" Canvas.Top="199" Height="349" Width="504" Canvas.Left="10" >
+                        <Border.Style>
+                            <Style TargetType="{x:Type Border}">
+                                <Style.Triggers>
+                                    <Trigger Property="Visibility" Value="Hidden">
+                                        <Trigger.EnterActions>
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.5" From="0"  To="-1500"/>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </Trigger.EnterActions>
+                                    </Trigger>
+                                    <Trigger Property="Visibility" Value="Visible">
+                                        <Trigger.EnterActions>
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.8" From="-1500"  To="10"/>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </Trigger.EnterActions>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Border.Style>
+                        <Canvas x:Name="cnCamera" Visibility="Visible"  Background="#E53C3C3C" Margin="0,10,-152,-164" >
+                            <cam:Webcam x:Name="WebCamCtrl"  Background="#FF3A3939" BorderBrush="#FF3C3C3C" BorderThickness="2" Height="390" Canvas.Left="119" Width="500" Canvas.Top="12"/>
+                            <Border x:Name="bdrStop" Visibility="Hidden" BorderBrush="Black" BorderThickness="0" Height="81" Canvas.Top="24" Width="88" CornerRadius="10" Canvas.Left="-147">
+                                <Border.Style>
+                                    <Style TargetType="{x:Type Border}">
+                                        <Style.Triggers>
+                                            <Trigger Property="Visibility" Value="Hidden">
+                                                <Trigger.EnterActions>
+                                                    <BeginStoryboard>
+                                                        <Storyboard>
+                                                            <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.5" From="10"  To="-90"/>
+                                                        </Storyboard>
+                                                    </BeginStoryboard>
+                                                </Trigger.EnterActions>
+                                            </Trigger>
+                                            <Trigger Property="Visibility" Value="Visible">
+                                                <Trigger.EnterActions>
+                                                    <BeginStoryboard>
+                                                        <Storyboard>
+                                                            <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.5" From="-90"  To="10"/>
+                                                        </Storyboard>
+                                                    </BeginStoryboard>
+                                                </Trigger.EnterActions>
+                                            </Trigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Border.Style>
+                                <Canvas Margin="0,0,-10,-10"  >
+                                    <Button x:Name="btnStop" Style="{StaticResource ResourceKey={x:Static ToolBar.ButtonStyleKey}}" BorderThickness="0" Height="71" Width="88" Click="btnStop_Click">
+                                        <Button.Background>
+                                            <ImageBrush ImageSource="/KrausRGA;component/Images/Stopicon.png"/>
+                                        </Button.Background>
+                                        <Button.Foreground>
+                                            <ImageBrush ImageSource="/KrausRGA;component/Images/Stopicon.png"/>
+                                        </Button.Foreground>
+                                    </Button>
+                                    <TextBlock x:Name="tbkStop" Text="Stop Camera" HorizontalAlignment="Center" Height="19" Width="88" Canvas.Top="62" Foreground="White" FontSize="15"/>
+                                </Canvas>
+                            </Border>
+                            <Canvas Height="228" Width="112" Canvas.Top="-2">
+                                <Border x:Name="bdrCapture" Visibility="Visible" BorderBrush="Black" BorderThickness="0" Height="81" Canvas.Top="144" Width="83" CornerRadius="10" Canvas.Left="-124">
+                                    <Border.Style>
+                                        <Style TargetType="{x:Type Border}">
+                                            <Style.Triggers>
+                                                <Trigger Property="Visibility" Value="Hidden">
+                                                    <Trigger.EnterActions>
+                                                        <BeginStoryboard>
+                                                            <Storyboard>
+                                                                <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.5" From="10"  To="-90"/>
+                                                            </Storyboard>
+                                                        </BeginStoryboard>
+                                                    </Trigger.EnterActions>
+                                                </Trigger>
+                                                <Trigger Property="Visibility" Value="Visible">
+                                                    <Trigger.EnterActions>
+                                                        <BeginStoryboard>
+                                                            <Storyboard>
+                                                                <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.5" From="-90"  To="10"/>
+                                                            </Storyboard>
+                                                        </BeginStoryboard>
+                                                    </Trigger.EnterActions>
+                                                </Trigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Border.Style>
+                                    <Canvas >
+                                        <ComboBox Height="52" HorizontalAlignment="Left"
+																x:Name="VidDvcsComboBox" VerticalAlignment="Top" Width="328" Visibility="Visible" Canvas.Left="412" Canvas.Top="303" />
+                                        <ComboBox Visibility="Visible" Height="53" HorizontalAlignment="Left"
+																x:Name="AudDvcsComboBox" VerticalAlignment="Top" Width="302" Canvas.Left="105" Canvas.Top="302" />
+                                    </Canvas>
+                                </Border>
+                                <Border x:Name="bdrStartCapture"  Visibility="Visible" BorderThickness="0" Height="71" Canvas.Top="30" Width="78" CornerRadius="10" Canvas.Left="10">
+                                    <Border.Style>
+                                        <Style TargetType="{x:Type Border}">
+                                            <Style.Triggers>
+                                                <Trigger Property="Visibility" Value="Hidden">
+                                                    <Trigger.EnterActions>
+                                                        <BeginStoryboard>
+                                                            <Storyboard>
+                                                                <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.5" From="10"  To="-90"/>
+                                                            </Storyboard>
+                                                        </BeginStoryboard>
+                                                    </Trigger.EnterActions>
+                                                </Trigger>
+                                                <Trigger Property="Visibility" Value="Visible">
+                                                    <Trigger.EnterActions>
+                                                        <BeginStoryboard>
+                                                            <Storyboard>
+                                                                <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.5" From="-90"  To="10"/>
+                                                            </Storyboard>
+                                                        </BeginStoryboard>
+                                                    </Trigger.EnterActions>
+                                                </Trigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Border.Style>
+                                    <Canvas Margin="2,12,-9,-17" >
+                                        <Button x:Name="btnStartCapture" Style="{StaticResource ResourceKey={x:Static ToolBar.ButtonStyleKey}}" BorderThickness="0" Height="60" Width="78" Click="btnStartCapture_Click"  >
+                                            <Button.Background>
+                                                <ImageBrush ImageSource="/KrausRGA;component/Images/iconplay.png"/>
+                                            </Button.Background>
+                                            <Button.Foreground>
+                                                <ImageBrush ImageSource="/KrausRGA;component/Images/iconplay.png"/>
+                                            </Button.Foreground>
+                                        </Button>
+                                        <TextBlock x:Name="tbkStartCapture" Text="Start Camera" HorizontalAlignment="Center" Height="20" Width="85" Canvas.Top="56" Foreground="White" FontSize="15"/>
+                                    </Canvas>
+                                </Border>
+                            </Canvas>
+                            <ScrollViewer x:Name="sclPh" CanContentScroll="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Hidden" Canvas.Left="416" Canvas.Top="24" Width="32" >
+                                <StackPanel OverridesDefaultStyle="True" CanHorizontallyScroll="True" CanVerticallyScroll="True" Orientation="Horizontal"  x:Name="spPhotos" HorizontalAlignment="Left" Height="186" VerticalAlignment="Top" Width="829"/>
+                            </ScrollViewer>
+                            <Button Style="{StaticResource ResourceKey={x:Static ToolBar.ButtonStyleKey}}" x:Name="brnCloseCamera" Content="Close Camera" Canvas.Left="457" 
+													Canvas.Top="197" Width="502" Height="108" RenderTransformOrigin="0.5,0.5" Background="#FFE07D1A" Foreground="White"
+													HorizontalAlignment="Right" FontSize="30" FontWeight="Bold" Click="brnCloseCamera_Click">
+                                <Button.RenderTransform>
+                                    <TransformGroup>
+                                        <ScaleTransform/>
+                                        <SkewTransform/>
+                                        <RotateTransform Angle="89.854"/>
+                                        <TranslateTransform/>
+                                    </TransformGroup>
+                                </Button.RenderTransform>
+                            </Button>
+                            <TextBlock Canvas.Left="81" TextWrapping="Wrap" FontSize="30" Foreground="WhiteSmoke" Text="Hold Camera on Barcode." Canvas.Top="407" Width="557"/>
+                        </Canvas>
+                    </Border>
                 </Canvas>
             </Border>
+
         </Grid>
+
     </Viewbox>
 </Window>
